Slide 2: add rotation 2d image

--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -37,9 +37,9 @@
 \begin{frame}
     \frametitle{Representación de pose en 2D}
 
-    \begin{figure}
+    \begin{center}
         \includegraphics[width=0.2\columnwidth]{./images/coordinate_systems.pdf}
-    \end{figure}
+    \end{center}
     
     La {\bf pose del robot} en el marco de referencia global se especifica mediante las coordenadas $x$ e $y$ del punto $p$, y el ángulo de orientación $\theta$ (diferencia angular entre los marcos de referencia global y local).
 
@@ -120,7 +120,6 @@
     \frametitle{Cinemática directa de un robot diferencial}
     \scriptsize
     \begin{figure}[!h]
-        \centering
         \subfloat[]
         {
             \includegraphics[width=0.2\columnwidth]{./images/differential_drive.pdf}
