Add euler angles

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -451,9 +451,14 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
 	
 	Una rotación de un marco de referencia a otro se puede obtener mediante la multiplicación de varias rotaciones.
 	
+   
+   Ángulos de Euler:
+   
+  
 	Rotación Intrínseca
 	$R = R_{x} R_{y} R_{z}$
-	
+    
+    $z-x-z$ 
 	
 	\TODO{SLIDE a realizar...}
 	
