Add euler links

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -448,6 +448,12 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
 \begin{frame}
 	\frametitle{Rotaciones generales 3D}
 
+
+    buen material:
+    https://www.youtube.com/watch?v=d5sGRhjMXbY
+    https://www.youtube.com/watch?v=geaUKjEYHtM
+    https://www.youtube.com/watch?v=oaq4Z4rbKkA
+
 	
 	Una rotación de un marco de referencia a otro se puede obtener mediante la multiplicación de varias rotaciones.
 	
