Add euler images

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -460,6 +460,27 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
    
    Ángulos de Euler:
    
+       \begin{figure}[!h]
+   	\centering
+   	\subfloat[]
+   	{
+   		\includegraphics[width=0.2\columnwidth]{./images/euler_angles_initial.pdf}
+   	}
+   	\subfloat[]
+   	{
+   		\includegraphics[width=0.2\columnwidth]{./images/euler_angles_alpha_rotation.pdf}
+   	}
+   	\subfloat[]
+   	{
+   		\includegraphics[width=0.2\columnwidth]{./images/euler_angles_beta_rotation.pdf}
+   	}
+   	\subfloat[]
+   	{
+   		\includegraphics[width=0.2\columnwidth]{./images/euler_angles_gamma_rotation.pdf}
+   	}
+   \end{figure}
+   
+      
   
 	Rotación Intrínseca
 	$R = R_{x} R_{y} R_{z}$
