--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -422,7 +422,7 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
 
 \begin{frame}
     \frametitle{Ángulos de Euler}
-
+    \scriptsize
     \note{Euler se pruncia oiler.}
 
     \note{buen material:
@@ -439,29 +439,25 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
     \end{block}
    
     Ejemplo de aplicación de Ángulos de Euler $\alpha$, $\beta$ y $\gamma$ utilizando la combinación $zxz$:
-   
-    \begin{figure}[!h]
+   \begin{figure}[!h]
            \centering
-           \subfloat[]
+           \subfloat[$R = R_{x}(\alpha) \, R_{x}(\beta) \, R_{z}(\gamma)$]
            {
-               \includegraphics[width=0.2\columnwidth]{./images/euler_angles_initial.pdf}
+               \includegraphics[width=0.23\columnwidth]{./images/euler_angles_initial.pdf}
            }
-           \subfloat[]
+           \subfloat[$R_{z}(\alpha)$]
            {
-               \includegraphics[width=0.2\columnwidth]{./images/euler_angles_alpha_rotation.pdf}
+               \includegraphics[width=0.23\columnwidth]{./images/euler_angles_alpha_rotation.pdf}
            }
-           \subfloat[]
+           \subfloat[$R_{x}(\beta)$]
            {
-               \includegraphics[width=0.2\columnwidth]{./images/euler_angles_beta_rotation.pdf}
+               \includegraphics[width=0.23\columnwidth]{./images/euler_angles_beta_rotation.pdf}
            }
-           \subfloat[]
+           \subfloat[$R_{z}(\gamma)$]
            {
-               \includegraphics[width=0.2\columnwidth]{./images/euler_angles_gamma_rotation.pdf}
+               \includegraphics[width=0.23\columnwidth]{./images/euler_angles_gamma_rotation.pdf}
            }
     \end{figure}
-
-
-    \note{Copiar slides donde se muestra que las rotaciones intrínsecas son equivalentes a las rotaciones extrínsecas: https://www.youtube.com/watch?v=icczqt73B7o}    
 \end{frame}
 
 
@@ -469,7 +465,7 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
     \frametitle{Ángulos de Tait-Bryann}
     \small
     \begin{block}{Ángulos de Tait-Bryann}
-        Combinaciones de giros con Ángulos de Tait-Bryann (o ángulos de navegación): $xyz$ $xzy$, $yxz$, $yzx$, $zxy$ y $zyx$. Los ángulos Tait-Bryann se usan normalmente para definir la posición de aeronaves, satélites o embarcaciones. Los ángulos Tait-Bryann se aplican utilizando un sistema de coordenadas fijo (Rotaciones extrínsecas).
+        Combinaciones de giros con Ángulos de Tait-Bryann (o ángulos de navegación): $xyz$ $xzy$, $yxz$, $yzx$, $zxy$ y $zyx$. Los ángulos Tait-Bryann se usan normalmente para definir la orientación de aeronaves, satélites o embarcaciones. Los ángulos Tait-Bryann se aplican utilizando un sistema de coordenadas fijo (Rotaciones extrínsecas).
     \end{block}
     
     \begin{block}{Ángulos de Yaw-Pitch-Roll}
