--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -242,35 +242,41 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 \begin{frame}
     \frametitle{Algunas Propiedades de las transformaciones}
 
-    Composición:
-    \begin{equation*}
-        \transform{}{1}\transform{}{2} =
-        \begin{bmatrix}
-            \rotationCoord{}{1} & \translationCoord{}{1}\\
-            \vec{0} & 1
-        \end{bmatrix}
-        \begin{bmatrix}
-            \rotationCoord{}{2} & \translationCoord{}{2}\\
-            \vec{0} & 1
-        \end{bmatrix} =
-        \begin{bmatrix}
-            \rotationCoord{}{1}\rotationCoord{}{2} & \translationCoord{}{1}+\rotationCoord{}{1}\translationCoord{}{2}\\
-            \vec{0} & 1
-        \end{bmatrix}
-    \end{equation*}
+    \begin{itemize}
+        \item Composición:
+        \begin{equation*}
+            \transform{}{1}\transform{}{2} =
+            \begin{bmatrix}
+                \rotationCoord{}{1} & \translationCoord{}{1}\\
+                \vec{0} & 1
+            \end{bmatrix}
+            \begin{bmatrix}
+                \rotationCoord{}{2} & \translationCoord{}{2}\\
+                \vec{0} & 1
+            \end{bmatrix} =
+            \begin{bmatrix}
+                \rotationCoord{}{1}\rotationCoord{}{2} & \translationCoord{}{1}+\rotationCoord{}{1}\translationCoord{}{2}\\
+                \vec{0} & 1
+            \end{bmatrix}
+        \end{equation*}
+        
+        \item Inversa:
+        \begin{equation*}
+            \transform{}{}^{-1}=
+            \begin{bmatrix}
+                \rotation & \translation\\
+                \vec{0} & 1
+            \end{bmatrix}^{-1} =
+            \begin{bmatrix}
+                \rotation^{\top} & -\rotation^{\top}\translation\\
+                \vec{0} & 1
+            \end{bmatrix}
+        \end{equation*}
+        
+        \item $\transform{}{} \in SE(3)$
+    \end{itemize}
 
-    Inversa:
-    \begin{equation*}
-        \transform{}{}^{-1}=
-        \begin{bmatrix}
-            \rotation & \translation\\
-            \vec{0} & 1
-        \end{bmatrix}^{-1} =
-        \begin{bmatrix}
-            \rotation^{\top} & -\rotation^{\top}\translation\\
-            \vec{0} & 1
-        \end{bmatrix}
-    \end{equation*}
+
 
 \end{frame}
 
@@ -364,7 +370,6 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     \begin{figure}[!h]
         \includegraphics[width=0.4\columnwidth]{./images/roll_pitch_yaw.pdf}
     \end{figure}
-    \TODO{Gimbal-Lock Video explanation: https://youtu.be/-WXfEPg8eMM}
 \end{frame}
 
 \begin{frame}
@@ -407,20 +412,6 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 \end{frame}
 
 \begin{frame}
-    \frametitle{Rotaciones generales 3D}
-    \tiny
-    
-\note{Davenport demostró que se puede lograr descomponer cualquier orientación mediante la sucesión de tres rotaciones elementales utilizando ejes no ortogonales. Las rotaciones elementales pueden darse respecto a los ejes del sistema de coordenadas fijo (rotaciones extrínsecas) o sobre los ejes de un sistema de coordenadas giratorio, que inicialmente se alinea con el sistema de ejes fijo y modifica su orientación después de cada rotación elemental (rotaciones intrínsecas).
-
-Según el teorema de Davenport, es posible una descomposición única si y solo si el segundo eje es perpendicular a los otros dos ejes. Por lo tanto, los ejes 1 y 3 deben estar en el plano ortogonal al eje 2.
-
-En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y de las rotaciones encadenadas de Tait-Bryan son casos particulares de esta configuración general. El caso de Tait-Bryan aparece cuando los ejes 1 y 3 son perpendiculares, y el caso de Euler aparece cuando se superponen.
-}
-
-\end{frame}
-
-
-\begin{frame}
     \frametitle{Ángulos de Euler}
     \scriptsize
     \note{Euler se pruncia oiler.}
@@ -428,7 +419,6 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
     \note{buen material:
         https://www.youtube.com/watch?v=d5sGRhjMXbY
         https://www.youtube.com/watch?v=geaUKjEYHtM
-        https://www.youtube.com/watch?v=oaq4Z4rbKkA
     }
 
     
@@ -468,11 +458,11 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
         Combinaciones de giros con Ángulos de Tait-Bryann (o ángulos de navegación): $xyz$ $xzy$, $yxz$, $yzx$, $zxy$ y $zyx$. Los ángulos Tait-Bryann se usan normalmente para definir la orientación de aeronaves, satélites o embarcaciones. Los ángulos Tait-Bryann se aplican utilizando un sistema de coordenadas fijo (Rotaciones extrínsecas).
     \end{block}
     
-    \begin{block}{Ángulos de Yaw-Pitch-Roll}
-        Específicamente, la combinación $zyx$ de Ángulos de Tait-Bryann se denomina $Yaw$, $Pitch$ y $Roll$.
+    \begin{block}{Ángulos de Roll-Pitch-Yaw}
+        Específicamente, la combinación $zyx$ de Ángulos de Tait-Bryann se denomina $Roll$, $Pitch$ y $Yaw$.
     \end{block}
     
-    Matríz de Rotación resultante utilizando ángulos Yaw-Pitch-Roll:
+    Matríz de Rotación resultante utilizando ángulos Roll-Pitch-Yaw:
     \scriptsize
     \begin{align*}
         R = R_{z}(\gamma) \, R_{y}(\beta) \, R_{x}(\alpha) &=
@@ -502,8 +492,38 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
         \end{bmatrix}
     \end{align*}
     
-    \note{Copiar slides donde se muestra que las rotaciones intrínsecas son equivalentes a las rotaciones extrínsecas: https://www.youtube.com/watch?v=icczqt73B7o}
+    \note{fuente: https://www.youtube.com/watch?v=oaq4Z4rbKkA}
     
+    \note{fuente: https://www.youtube.com/watch?v=icczqt73B7o}
+    
+    \note{Davenport demostró que se puede lograr descomponer cualquier orientación mediante la sucesión de tres rotaciones elementales utilizando ejes no ortogonales. Las rotaciones elementales pueden darse respecto a los ejes del sistema de coordenadas fijo (rotaciones extrínsecas) o sobre los ejes de un sistema de coordenadas giratorio, que inicialmente se alinea con el sistema de ejes fijo y modifica su orientación después de cada rotación elemental (rotaciones intrínsecas).
+        
+        Según el teorema de Davenport, es posible una descomposición única si y solo si el segundo eje es perpendicular a los otros dos ejes. Por lo tanto, los ejes 1 y 3 deben estar en el plano ortogonal al eje 2.
+        
+        En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y de las rotaciones encadenadas de Tait-Bryan son casos particulares de esta configuración general. El caso de Tait-Bryan aparece cuando los ejes 1 y 3 son perpendiculares, y el caso de Euler aparece cuando se superponen.
+    }
+    
+\end{frame}
+
+\begin{frame}
+    \frametitle{Gimbal Lock (Bloqueo de Cardan)}
+    Cuando representamos una Rotación con ángulos de Euler se puede producir una situación similar al bloqueo de Cardan.
+    
+    La palabra bloqueo puede ser confusa: ninguno de los rotores está bloqueado. Los tres pueden todavía moverse libremente sobre sus ejes de suspensión respectivos. Sin embargo, debido a la orientación paralela de los ejes de dos de los rotores, existe un eje sobre el que ninguno de los rotores puede girar.
+    
+    \begin{itemize}
+        \item Pérdida de un grado de libertad cuando dos de los tres ejes de giro se colocan en paralelo.
+        \item Existe un eje sobre el que no se puede girar.
+    \end{itemize}
+    
+    En el caso de los ángulos de Euler, lo que sucede es que dos de los tres ángulos describen un mismo giro.
+    
+    Los ángulos de Euler proporcionan una descripción numérica de cualquier rotación en el espacio tridimensional usando tres reales $\alpha$ $\beta$ y $\gamma$. Pero no sólo no es esta descripción única sino que además existen puntos sobre los que \textbf{no todo cambio en el espacio de rotaciones puede ser expresado como un cambio en el espacio de los ángulos de Euler}.
+
+    
+    \TODO{https://youtu.be/Mm8tzzfy1Uw}
+    \TODO{https://youtu.be/oaq4Z4rbKkA}
+    \TODO{Gimbal-Lock Video explanation: https://youtu.be/-WXfEPg8eMM}
 \end{frame}
 
 \begin{frame}
@@ -513,6 +533,7 @@ En consecuencia, las descomposiciones de las rotaciones encadenadas de Euler y d
         \item $R^{\mathsf {T}}=R^{-1}$ Matriz ortogonal
         \item $\det R = \pm 1$ (esto implica que la longitud del vector no cambia luego de la rotación)
         \item $R \in SO(3)$ entonces $\rotationCoord{A}{C} = \rotationCoord{A}{B} \rotationCoord{B}{C}$ y $\rotationCoord{A}{B} = \rotationCoord{B}{A}^{-1}$
+        \item \TODO{Agregar imagen y explicar mejor: Los vectores columnas de la matriz de Rotación muestran donde se encuentran posicionados los ejes x, y y z luego de aplicar la rotación}
     \end{itemize}
 
     Determinar el ángulo de una matriz de rotación utilizando la traza de la matriz (la suma de los elementos de la diagonal del matriz).
