--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -507,20 +507,33 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 
 \begin{frame}
     \frametitle{Gimbal Lock (Bloqueo de Cardan)}
-    Cuando representamos una Rotación con ángulos de Euler se puede producir una situación similar al bloqueo de Cardan.
+    \scriptsize
     
-    La palabra bloqueo puede ser confusa: ninguno de los rotores está bloqueado. Los tres pueden todavía moverse libremente sobre sus ejes de suspensión respectivos. Sin embargo, debido a la orientación paralela de los ejes de dos de los rotores, existe un eje sobre el que ninguno de los rotores puede girar.
+    \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.2\textwidth]{./images/gimbal_rotation.png}}{./videos/gimbal_rotation.mp4}\hspace{1em}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.2\textwidth]{./images/gimbal_lock_video.png}}{./videos/gimbal_lock.mp4}
+    \end{center}
+    
+    
+    Cuando representamos una Rotación con ángulos de Euler se puede producir una situación similar al Bloqueo de Cardan (\emph{Gimbal Lock}).    
+    
+    La palabra ``bloqueo'' puede ser confusa: ninguno de los cardanes está bloqueado. Los tres pueden todavía moverse libremente sobre sus ejes de suspensión respectivos. Sin embargo, debido a la orientación paralela de los ejes de dos de los cardanes, existe un eje sobre el que ninguno de los cardanes puede girar.
     
     \begin{itemize}
         \item Pérdida de un grado de libertad cuando dos de los tres ejes de giro se colocan en paralelo.
-        \item Existe un eje sobre el que no se puede girar.
+        \item Existe un eje sobre el que no se puede girar. En la práctica esto puede ser que un robot se rompa, impidiendo a que haga fuerza.
     \end{itemize}
     
-    En el caso de los ángulos de Euler, lo que sucede es que dos de los tres ángulos describen un mismo giro.
+    
+    Tool Online para mostrar Gimbal Lock: \url{https://danceswithcode.net/engineeringnotes/rotations_in_3d/demo3D/rotations_in_3d_tool.html}
+    
+    En el caso de los ángulos de Euler, lo que sucede es que dos de los tres ángulos describen un mismo giro.   
     
     Los ángulos de Euler proporcionan una descripción numérica de cualquier rotación en el espacio tridimensional usando tres reales $\alpha$ $\beta$ y $\gamma$. Pero no sólo no es esta descripción única sino que además existen puntos sobre los que \textbf{no todo cambio en el espacio de rotaciones puede ser expresado como un cambio en el espacio de los ángulos de Euler}.
-
     
+    El gimbal lock generó el accidente del apolo 13.
+
+
     \TODO{https://youtu.be/Mm8tzzfy1Uw}
     \TODO{https://youtu.be/oaq4Z4rbKkA}
     \TODO{Gimbal-Lock Video explanation: https://youtu.be/-WXfEPg8eMM}
@@ -589,7 +602,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
 
 \begin{frame}
     \frametitle{Quaternions}
-
+    \scriptsize
     \begin{center}
         \includegraphics[width=0.2\columnwidth]{./images/quaternion.pdf}
     \end{center}
@@ -602,4 +615,13 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
             \cos \frac{\theta}{2} & v_{x} \sin \frac{\theta}{2} & v_{y} \sin \frac{\theta}{2} & v_{z}\sin \frac{\theta}{2}
         \end{bmatrix}
     \end{align*}
+
+    Ventajas:
+    \begin{itemize}
+        \item Componer rotaciones es más rápido y numéricamente más estable
+        \item Extraer el ángulo y el eje de rotación es más simple
+        \item Interpolar dos rotaciones es más directo (utilizando la función $slerp()$)
+        \item Los cuaterniones no sufren de \emph{Gimbal Lock} como los ángulos de Euler.
+    \end{itemize}
+
 \end{frame}
